--- a/.github/workflows/aeHosting_mainnet.yml
+++ b/.github/workflows/aeHosting_mainnet.yml
@@ -3,7 +3,7 @@ name: CI/CD
 on:
     push:
       branches:
-        - preprod
+        - main
 
 jobs:
   deploy_to_aeHosting:
@@ -28,8 +28,8 @@ jobs:
         id: deploy
         uses: archethic-foundation/aeweb-github-action@v1.8.7
         with:
-          seed: ${{ secrets.ARCH_BASE_TESTNET_SEED }}
-          endpoint: "https://testnet.archethic.net"
+          seed: ${{ secrets.ARCH_BASE_MAINNET_SEED }}
+          endpoint: "https://mainnet.archethic.net"
           path: "./dist"
           keychainFundingService: "archethic-wallet-ARCHETHIC.NET"
           keychainWebsiteService: "aeweb-UCO-Migration"
