chore: :wrench: Add mainnet SSL cert and github actions conf

--- a/.github/workflows/aeHosting_mainnet.yml
+++ b/.github/workflows/aeHosting_mainnet.yml
@@ -3,7 +3,7 @@ name: CI/CD
 on:
     push:
       branches:
-        - wait
+        - main
 
 jobs:
   deploy_to_aeHosting:
@@ -33,6 +33,8 @@ jobs:
           path: "./dist"
           keychainFundingService: "archethic-wallet-archethic-front-app"
           keychainWebsiteService: "aeweb-UCO-Migration"
+          sslCertificateFile: "certificate_bridge_mainnet.crt"
+          sslKey: ${{ secrets.SSL_KEY_MAINNET }}
           sendTransactionTimeout: 180
           percentageOfConfirmations: 50  
         
